--- a/package.json
+++ b/package.json
@@ -10,8 +10,22 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "1.7.0",
+    "@react-navigation/native": "5.7.0",
+    "@react-navigation/stack": "5.7.0",
+    "axios": "0.19.0",
+    "i18next": "^23.7.16",
     "react": "17.0.2",
-    "react-native": "0.65.1"
+    "react-i18next": "^14.0.0",
+    "react-native": "0.65.1",
+    "react-native-gesture-handler": "2.14.1",
+    "react-native-paper": "3.2.1",
+    "react-native-safe-area-context": "3.1.1",
+    "react-native-svg": "^13.9.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "redux-persist": "6.0.0",
+    "redux-saga": "1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
