--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-paper": "3.2.1",
     "react-native-safe-area-context": "3.1.1",
     "react-native-svg": "^13.9.0",
+    "react-native-vector-icons": "^7.0.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-persist": "6.0.0",
