--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.65.1",
     "react-native-gesture-handler": "2.14.1",
     "react-native-paper": "3.2.1",
+    "react-native-restart": "0.0.24",
     "react-native-safe-area-context": "3.1.1",
     "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^7.0.0",
