--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "5.7.0",
     "@react-navigation/stack": "5.7.0",
     "axios": "0.19.0",
+    "firebase": "^10.12.2",
     "i18next": "^23.7.16",
     "react": "17.0.2",
     "react-i18next": "^14.0.0",
